Fixing deployment.yml

--- a/deployment.yml
+++ b/deployment.yml
@@ -15,12 +15,12 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: gke-test
+  name: ci-test
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: gke-test
+      app: ci-test
   strategy:
     rollingUpdate:
       maxSurge: 1
